bad/assign_arr_elem_class_array.example_compiler_output
ERROR
[1mbad/assign_arr_elem_class_array.lat:6:16: [1;31merror: [0;1massigning to `Y` from incompatible type `int[]`[m
	(new Y[3])[1] = new int[3];
	              [1;32m^[m
